@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,6 @@ package sax;
 
 import javax.xml.datatype.DatatypeConfigurationException;
 
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.testng.Assert;
 import org.xml.sax.helpers.XMLReaderFactory;
@@ -34,11 +33,9 @@ import org.xml.sax.helpers.XMLReaderFactory;
  * @test
  * @bug 6925410
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow sax.Bug6925410Test
  * @run testng/othervm sax.Bug6925410Test
  * @summary Test XMLReaderFactory can createXMLReader repeatedly.
  */
-@Listeners({jaxp.library.BasePolicy.class})
 public class Bug6925410Test {
 
     @Test
